--- a/test_1/board/build.gradle
+++ b/test_1/board/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.30'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
