--- a/test_1/board/build.gradle
+++ b/test_1/board/build.gradle
@@ -16,10 +16,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.projectlombok:lombok:1.18.30'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
